--- a/sass/layout/_headers.scss
+++ b/sass/layout/_headers.scss
@@ -1,9 +1,10 @@
 .header {
-    height: 90vh;
+    height: 85vh;
     background-image: linear-gradient(to right top,rgba($purple-dark, 0.4),rgba($purple-light, 1)),url(../img/cloud.jpg);
     background-size: cover;
     background-position: top;
-    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%);
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%);
     position: relative; 
   
     &__logo-box {
